agglomerative description written

--- a/transfer_learning/agglomerative_CNN_clustering.ipynb
+++ b/transfer_learning/agglomerative_CNN_clustering.ipynb
@@ -5,17 +5,28 @@
    "metadata": {},
    "source": [
     "# agglomerative_CNN_clustering\n",
-    "\n",
-    "(Hierarchical clustering)\n",
-    "- Affinity propagation appears to do quite a good job at grouping together individual clusters (and helps intuit the ballpark number of catagories), however, the clustering of galaxies is most likely hierarchical in structure (clustering-wise at least). \n",
-    "- Using agglomerative clustering to construct clusters"
+    "- In [CNN_transfer_learning](./CNN_transfer_learning), we used a pre-trained convolutional neural network to generate a new feature set to better represent the galaxy images. These features were then compressed by a principal component analysis.\n",
+    "- In [kmeans_CNN_clustering](./kmeans_CNN_clustering.ipynb), we did a basic grouping into 10 clusters. Since there is not really a _good_ answer for how many clusters of galaxies we should have, so now lets try an algorithm that dictates the number of clusters.\n",
+    "- In [affinity_propagation_CNN_clustering](./affinity_propagation_CNN_clustering.ipynb), we used affinity propagation to automatically generate the clusters (and hence number and sizes). Using the higher dimensionality parameter space (i.e. output from CNN compress by the pca), we find that the process results in very precise clusters! The visual similarity is striking, however, is clustering based on postion angle (i.e. which direction the galaxy is pointing), colour, spiral (or other) structure and size/footprint of the galaxy in the image. Connecting these clusters is the difficult part, since many may simply be the same catagory/type of galaxy but viewed in a different way (position angle or footprint).\n",
+    "- To help aid this, we now look to hierarchical clustering (i.e. agglomerative - bottom-up) clustering to help define several levels of similarity (i.e, using ~175 clusters as a starting point)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/miniconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np \n",
@@ -36,10 +47,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./cluster_plots/affinity_propagation/CNN-37632_PCA-100/'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_feat = 100\n",
+    "cnn_feat = 37632\n",
+    "\n",
+    "features = np.load('./features/CNN-' + str(cnn_feat) + '_PCA-' + str(pca_feat) + '_features.npy')\n",
+    "weights = np.load('./features/CNN-' + str(cnn_feat) + '_PCA-' + str(pca_feat) + '_weights.npy')\n",
+    "\n",
+    "plot_path = './cluster_plots/affinity_propagation/CNN-' + str(cnn_feat) + '_PCA-' + str(pca_feat) +'/'\n",
+    "plot_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining agglomerative model"
+   ]
   },
   {
    "cell_type": "code",
@@ -51,18 +89,6 @@
     "agglo = AgglomerativeClustering(n_clusters=10, linkage='ward')\n",
     "# fit the model\n",
     "agglo_labels = agglo.fit_predict(compressed_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for cluster in np.unique(agglo_labels):\n",
-    "    print('Cluster : {}'.format(cluster))\n",
-    "    cluster_evaluate.plot_cluster(x[agglo_labels == cluster][0:10])\n",
-    "    plt.show()"
    ]
   }
  ],
